crates/xifty-cli/tests/snapshots/cli_contract__extract_xmp_tiff_normalized.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
assertion_line: 301
expression: "extract_json(\"xmp.tiff\", ViewMode::Normalized)"
---
{
  "input": {
    "container": "tiff",
    "detected_format": "tiff",
    "path": "xmp.tiff"
  },
  "normalized": {
    "fields": [
      {
        "confidence": 0.949999988079071,
        "field": "captured_at",
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 750,
            "offset_start": 738,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "created_at",
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 762,
            "offset_start": 750,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "modified_at",
        "sources": [
          {
            "container": "tiff",
            "namespace": "xmp",
            "offset_end": 735,
            "offset_start": 148,
            "path": "xmp_packet"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T13:00:00"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.make",
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 46,
            "offset_start": 34,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFtyCam"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.model",
        "notes": [
          "selected Model from exif over 1 competing candidate(s)"
        ],
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 58,
            "offset_start": 46,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "IterationOne"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "software",
        "notes": [
          "selected Software from exif over 1 competing candidate(s)"
        ],
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 82,
            "offset_start": 70,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFtyTestGen"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "author",
        "sources": [
          {
            "container": "tiff",
            "namespace": "xmp",
            "offset_end": 735,
            "offset_start": 148,
            "path": "xmp_packet"
          }
        ],
        "value": {
          "kind": "string",
          "value": "K"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "copyright",
        "sources": [
          {
            "container": "tiff",
            "namespace": "xmp",
            "offset_end": 735,
            "offset_start": 148,
            "path": "xmp_packet"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "orientation",
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 70,
            "offset_start": 58,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 1
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.width",
        "notes": [
          "selected ImageWidth from exif over 1 competing candidate(s)"
        ],
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 22,
            "offset_start": 10,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 800
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.height",
        "notes": [
          "selected ImageHeight from exif over 1 competing candidate(s)"
        ],
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 34,
            "offset_start": 22,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 600
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.iso",
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 798,
            "offset_start": 786,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 200
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.aperture",
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 786,
            "offset_start": 774,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "rational",
          "value": {
            "denominator": 10,
            "numerator": 56
          }
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.shutter_speed",
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 774,
            "offset_start": 762,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "rational",
          "value": {
            "denominator": 250,
            "numerator": 1
          }
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.focal_length_mm",
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 810,
            "offset_start": 798,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "float",
          "value": 50.0
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "lens.model",
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 834,
            "offset_start": 822,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty 50mm F2"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "lens.make",
        "sources": [
          {
            "container": "tiff",
            "namespace": "exif",
            "offset_end": 822,
            "offset_start": 810,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty Optics"
        }
      }
    ]
  },
  "report": {
    "conflicts": [
      {
        "field": "captured_at",
        "message": "xmp:CreateDate=2024-04-16T12:34:56 vs exif:DateTimeOriginal=2024:04:16 12:34:56",
        "sources": [
          {
            "namespace": "xmp",
            "provenance": {
              "container": "tiff",
              "namespace": "xmp",
              "offset_end": 735,
              "offset_start": 148,
              "path": "xmp_packet"
            },
            "tag_id": "CreateDate",
            "tag_name": "CreateDate",
            "value": {
              "kind": "string",
              "value": "2024-04-16T12:34:56"
            }
          },
          {
            "namespace": "exif",
            "provenance": {
              "container": "tiff",
              "namespace": "exif",
              "offset_end": 750,
              "offset_start": 738,
              "path": "exif_ifd"
            },
            "tag_id": "0x9003",
            "tag_name": "DateTimeOriginal",
            "value": {
              "kind": "timestamp",
              "value": "2024:04:16 12:34:56"
            }
          }
        ]
      },
      {
        "field": "device.model",
        "message": "multiple candidates disagreed; selected Model from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "tiff",
              "namespace": "exif",
              "offset_end": 58,
              "offset_start": 46,
              "path": "ifd0"
            },
            "tag_id": "0x0110",
            "tag_name": "Model",
            "value": {
              "kind": "string",
              "value": "IterationOne"
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "tiff",
              "namespace": "xmp",
              "offset_end": 735,
              "offset_start": 148,
              "path": "xmp_packet"
            },
            "tag_id": "Model",
            "tag_name": "Model",
            "value": {
              "kind": "string",
              "value": "IterationTwo"
            }
          }
        ]
      },
      {
        "field": "software",
        "message": "multiple candidates disagreed; selected Software from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "tiff",
              "namespace": "exif",
              "offset_end": 82,
              "offset_start": 70,
              "path": "ifd0"
            },
            "tag_id": "0x0131",
            "tag_name": "Software",
            "value": {
              "kind": "string",
              "value": "XIFtyTestGen"
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "tiff",
              "namespace": "xmp",
              "offset_end": 735,
              "offset_start": 148,
              "path": "xmp_packet"
            },
            "tag_id": "Software",
            "tag_name": "Software",
            "value": {
              "kind": "string",
              "value": "XIFtyXmpGen"
            }
          }
        ]
      },
      {
        "field": "dimensions.width",
        "message": "multiple candidates disagreed; selected ImageWidth from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "tiff",
              "namespace": "exif",
              "offset_end": 22,
              "offset_start": 10,
              "path": "ifd0"
            },
            "tag_id": "0x0100",
            "tag_name": "ImageWidth",
            "value": {
              "kind": "integer",
              "value": 800
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "tiff",
              "namespace": "xmp",
              "offset_end": 735,
              "offset_start": 148,
              "path": "xmp_packet"
            },
            "tag_id": "ImageWidth",
            "tag_name": "ImageWidth",
            "value": {
              "kind": "integer",
              "value": 640
            }
          }
        ]
      },
      {
        "field": "dimensions.height",
        "message": "multiple candidates disagreed; selected ImageHeight from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "tiff",
              "namespace": "exif",
              "offset_end": 34,
              "offset_start": 22,
              "path": "ifd0"
            },
            "tag_id": "0x0101",
            "tag_name": "ImageHeight",
            "value": {
              "kind": "integer",
              "value": 600
            }
          },
          {
            "namespace": "xmp",
            "provenance": {
              "container": "tiff",
              "namespace": "xmp",
              "offset_end": 735,
              "offset_start": 148,
              "path": "xmp_packet"
            },
            "tag_id": "ImageHeight",
            "tag_name": "ImageHeight",
            "value": {
              "kind": "integer",
              "value": 480
            }
          }
        ]
      }
    ],
    "issues": []
  },
  "schema_version": "0.1.0"
}
