crates/xifty-cli/tests/snapshots/cli_contract__malformed_heic_report.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "extract_json(\"malformed_box.heic\", ViewMode::Report)"
---
{
  "input": {
    "container": "isobmff",
    "detected_format": "heif",
    "path": "malformed_box.heic"
  },
  "report": {
    "conflicts": [],
    "issues": [
      {
        "code": "isobmff_box_size_out_of_bounds",
        "context": "meta",
        "message": "box meta exceeds containing bounds",
        "offset": 24,
        "severity": "warning"
      },
      {
        "code": "no_metadata_entries",
        "message": "no supported metadata entries were decoded",
        "severity": "info"
      }
    ]
  },
  "schema_version": "0.1.0"
}
