crates/xifty-cli/tests/snapshots/cli_contract__malformed_png_report.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "extract_json(\"malformed_chunk.png\", ViewMode::Report)"
---
{
  "input": {
    "container": "png",
    "detected_format": "png",
    "path": "malformed_chunk.png"
  },
  "report": {
    "conflicts": [],
    "issues": [
      {
        "code": "png_chunk_length_invalid",
        "context": "eXIf",
        "message": "png chunk eXIf exceeds available bytes",
        "offset": 33,
        "severity": "warning"
      },
      {
        "code": "png_missing_iend",
        "message": "png stream ended without IEND chunk",
        "severity": "warning"
      }
    ]
  },
  "schema_version": "0.1.0"
}
