crates/xifty-cli/tests/snapshots/cli_contract__probe_animated_gif.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "probe_json(\"animated.gif\")"
---
{
  "containers": [
    {
      "kind": "container",
      "label": "gif",
      "offset_end": 85,
      "offset_start": 0
    },
    {
      "kind": "block",
      "label": "lsd",
      "offset_end": 13,
      "offset_start": 6,
      "parent_label": "gif"
    },
    {
      "kind": "block",
      "label": "gct",
      "offset_end": 19,
      "offset_start": 13,
      "parent_label": "gif"
    },
    {
      "kind": "block",
      "label": "app_ext:NETSCAPE2.0",
      "offset_end": 38,
      "offset_start": 19,
      "parent_label": "gif"
    },
    {
      "kind": "block",
      "label": "graphic_control_ext",
      "offset_end": 46,
      "offset_start": 38,
      "parent_label": "gif"
    },
    {
      "kind": "block",
      "label": "image_descriptor",
      "offset_end": 61,
      "offset_start": 46,
      "parent_label": "gif"
    },
    {
      "kind": "block",
      "label": "graphic_control_ext",
      "offset_end": 69,
      "offset_start": 61,
      "parent_label": "gif"
    },
    {
      "kind": "block",
      "label": "image_descriptor",
      "offset_end": 84,
      "offset_start": 69,
      "parent_label": "gif"
    },
    {
      "kind": "block",
      "label": "trailer",
      "offset_end": 85,
      "offset_start": 84,
      "parent_label": "gif"
    }
  ],
  "input": {
    "container": "gif",
    "detected_format": "gif",
    "path": "animated.gif"
  },
  "report": {
    "conflicts": [],
    "issues": [
      {
        "code": "no_metadata_entries",
        "message": "no supported metadata entries were decoded",
        "severity": "info"
      }
    ]
  },
  "schema_version": "0.1.0"
}
